add bless and curse glyphs

--- a/src/AppBundle/Resources/public/css/icons.css
+++ b/src/AppBundle/Resources/public/css/icons.css
@@ -75,6 +75,12 @@
 .icon-tablet:before {
 	content: "q";
 }
+.icon-bless:before {
+	content: "v";
+}
+.icon-curse:before {
+	content: "w";
+}
 .icon-per_investigator:before {
 	content: "u";
 	vertical-align : top;
