two missing rulings
Adding two missing rulings from the FAQ and one tiny formatting error.

--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -680,7 +680,7 @@
 
 </ul>
 
-<p><span style="color:blue">(Added in FAQ, section 'Frequently Asked Questions')</span><b>Frequently asked Bless and Curse questions:</b></p>
+<p><span style="color:blue">(Added in FAQ, section 'Frequently Asked Questions')</span> <b>Frequently asked Bless and Curse questions:</b></p>
 
 <ol>
 
@@ -1960,9 +1960,7 @@
 
 <li>  A card with the permanent keyword starts each game in play and is not shuffled into your investigator deck during setup.</li>
 
-<li>  A card with the permanent keyword cannot be discarded by any means.</li>
-
-<li>  Ruling from Matthew Newman regarding permanent cards: A card with the permanent keyword cannot be shuffled into an investigator's deck during a scenario or used to pay for the cost of any action that requires a card be discarded or returned to an investigator's deck or hand.</li>
+<li>  A card with the permanent keyword cannot leave play (except by elimination).</li>
 
 </ul>
 
@@ -2300,7 +2298,7 @@
 </td>
 </table>
 
-<p>If an investigator is at his or her slot limit for a type of asset and wishes to play or gain control of a different asset that would use that slot, the investigator must choose and discard other assets under his or her control simultaneously with the new asset entering the slot.</p>
+<p>If playing or gaining control of an asset would put an investigator above his or her slot limit for that type of asset, the investigator must choose and discard other assets under his or her control simultaneously with the new asset entering the slot.</p>
 
 <h2 id="Spawn">Spawn</h2>
 
