A missing ruling from FAQ

--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -197,6 +197,9 @@
 	<li><a href="#Skill_Tests">Skill Tests</a></li>
 	<li><a href="#Slots">Slots</a></li>
 	<li><a href="#Spawn">Spawn</a></li>
+		<ul>	
+		<li><a href="#Spawning_an_Enemy">Spawning an Enemy</a></li>
+		</ul>
 	<li><a href="#Standalone_Mode">Standalone Mode</a></li>
 	<li><a href="#Story_Cards">Story Cards</a></li>
 	<li><a href="#Supplies">Supplies</a></li>
@@ -2256,7 +2259,7 @@
 
 <p>A skill test is often referred to as a test of the specified skill. <em>(For example: "agility test," "combat test," "willpower test," or "intellect test.")</em></p>
 
-<p>See "<a href="#Skill_Test_Timing">Skill Test Timing</a>" on page 26.</p>
+<p>See "<a href="#Skill_Test_Timing">Skill Test Timing</a>".</p>
 
 <h2 id="Slots">Slots</h2>
 
@@ -2317,6 +2320,22 @@
 <li>  If a card ability instructs the players to spawn an enemy in a particular location <em>(for example: "Search the encounter deck for an Acolyte and spawn it in Southside")</em>, treat the ability causing the card to enter play as the enemy's spawn instruction, overriding any other spawn instruction.</li>
 
 </ul>
+
+<h3 id="Spawning_an_Enemy" style="color:blue">Spawning an Eenmy (added in FAQ, section 'Quick Reference')</h3>
+
+<p>1. If an enemy is being spawned without an investigator drawing it, the effect spawning the enemy will typically indicate where that enemy should spawn. After spawning the enemy at that location, it will automatically engage investigators at its location using the rules for "<a href="#Enemy_Engagement">Enemy Engagement</a>", unless it is aloof.</p>
+
+<p>2. If an investigator draws an enemy, check to see if the enemy has a "Spawn –" instruction.
+
+<ul>
+
+<li>  If the enemy has a "Spawn –" instruction, the enemy spawns at the indicated location. After spawning the enemy at that location, it will automatically engage investigators at its location using the rules for "<a href="#Enemy_Engagement">Enemy Engagement</a>", unless it is aloof.</li>
+
+<li>  If the enemy does not have a "Spawn –" instruction, the investigator drawing the enemy spawns it engaged with him/her, unless it is aloof.</li>
+
+</ul>
+
+<p><b>"Prey –" instructions have no direct impact on which location an enemy will spawn at.</b> The only time "Prey –" instructions will impact this process is when an enemy spawns unengaged at a location with multiple investigators, and you use the rules for "<a href="#Enemy_Engagement">Enemy Engagement</a>", to determine which investigator it should automatically engage.</p>
 
 <h2 id="Standalone_Mode">Standalone Mode</h2>
 
