--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -285,7 +285,7 @@
 
 <p>When investigators are forced to make a choice and there are multiple valid options, the lead investigator decides between those options. The Grim Rule does not play a part in these choices.</p>
 
-<p><i>For example: Locked Door reads “Attach to the location with the most clues,and without a Locked Door attached.” If there are 3 locations that are tied for the most clues, and none of them already have a Locked Door attached, the lead investigator decides between those 3 locations. Players are not forced to decide which of those 3 options would be the objectively worst option.</i></p>
+<p><i>For example: Locked Door reads “Attach to the location with the most clues, and without a Locked Door attached.” If there are 3 locations that are tied for the most clues, and none of them already have a Locked Door attached, the lead investigator decides between those 3 locations. Players are not forced to decide which of those 3 options would be the objectively worst option.</i></p>
 
 <p>The Grim Rule only comes into effect if players are unable to find the answer to a rules or timing conflict, and are thus unable to continue playing the game. It is designed to keep the game moving when looking up the correct answer would be too time-consuming or inconvenient for the players. The Grim Rule is not an exhaustive answer to rules/timing conflicts.</p>
 
@@ -859,7 +859,7 @@
 
 <p>When investigators are forced to make a choice and there are multiple valid options, the lead investigator decides between those options. The Grim Rule does not play a part in these choices.</p>
 
-<p><i>For example: Locked Door reads “Attach to the location with the most clues,and without a Locked Door attached.” If there are 3 locations that are tied for the most clues, and none of them already have a Locked Door attached, the lead investigator decides between those 3 locations. Players are not forced to decide which of those 3 options would be the objectively worst option.</i></p>
+<p><i>For example: Locked Door reads “Attach to the location with the most clues, and without a Locked Door attached.” If there are 3 locations that are tied for the most clues, and none of them already have a Locked Door attached, the lead investigator decides between those 3 locations. Players are not forced to decide which of those 3 options would be the objectively worst option.</i></p>
 
 <p>The Grim Rule only comes into effect if players are unable to find the answer to a rules or timing conflict, and are thus unable to continue playing the game. It is designed to keep the game moving when looking up the correct answer would be too time-consuming or inconvenient for the players. The Grim Rule is not an exhaustive answer to rules/timing conflicts.</p>
 
@@ -2233,7 +2233,7 @@
 
 <i>For example: Roland has the Roland's .38 Special card in play. He has the card "Teamwork" which can allow investigators at the same location to trade or give assets among one another. However, because Roland’s .38 Special is one of Roland’s signature cards, he cannot give it to another investigator.</i></li>
 
-<li>Signature cards need not abide by typical deckbuilding restrictions, and do not count toward any deckbuilding limitations if other cards share the same title.<li>
+<li>Signature cards need not abide by typical deckbuilding restrictions, and do not count toward any deckbuilding limitations if other cards share the same title.</li>
 
 </ul>
 
@@ -2321,7 +2321,7 @@
 
 </ul>
 
-<h3 id="Spawning_an_Enemy" style="color:blue">Spawning an Eenmy (added in FAQ, section 'Quick Reference')</h3>
+<h3 id="Spawning_an_Enemy" style="color:blue">Spawning an Enemy (added in FAQ, section 'Quick Reference')</h3>
 
 <p>1. If an enemy is being spawned without an investigator drawing it, the effect spawning the enemy will typically indicate where that enemy should spawn. After spawning the enemy at that location, it will automatically engage investigators at its location using the rules for "<a href="#Enemy_Engagement">Enemy Engagement</a>", unless it is aloof.</p>
 
