--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -2335,7 +2335,7 @@
 
 </ul>
 
-<p><b>"Prey –" instructions have no direct impact on which location an enemy will spawn at.</b> The only time "Prey –" instructions will impact this process is when an enemy spawns unengaged at a location with multiple investigators, and you use the rules for "<a href="#Enemy_Engagement">Enemy Engagement</a>", to determine which investigator it should automatically engage.</p>
+<p><b>"Prey –" instructions have no direct impact on which location an enemy will spawn at.</b> The only time "Prey –" instructions will impact this process is when an enemy spawns unengaged at a location with multiple investigators, and you use the rules for "<a href="#Enemy_Engagement">Enemy Engagement</a>" to determine which investigator it should automatically engage.</p>
 
 <h2 id="Standalone_Mode">Standalone Mode</h2>
 
@@ -2549,7 +2549,7 @@ A player cannot include 50 or more experience worth of cards in a standalone dec
 
 <h2 id="unless_all_clues_have_been_discovered" style="color:blue">"...Unless all of (location's) clues have been discovered." (added in FAQ, section 'Card Ability Interpretation', point 2.11)</h2>
 
-<p>Some locations have abilities that prevent you from entering or using a particular enemy unless all of the clues have been discovered from a particular location; for example, the Engine Car. When interpreting such an ability, if the location is unrevealed (and therefore has no clues on it), this does not satisfy the ability; it must have been revealed at some point.</p>
+<p>Some locations have abilities that prevent you from entering or using a particular ability unless all of the clues have been discovered from a particular location; for example, the Engine Car. When interpreting such an ability, if the location is unrevealed (and therefore has no clues on it), this does not satisfy the ability; it must have been revealed at some point.</p>
 
 <h2>Upkeep Phase</h2>
 
