--- a/src/AppBundle/Resources/views/Builder/deckedit.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckedit.html.twig
@@ -39,6 +39,7 @@
 	<input type="hidden" id="deck-cancel-edits" name="cancel_edits" value="0">
 	<input type="hidden" name="content">
 	<input type="hidden" name="ignored">
+	<input type="hidden" name="side">
 	<input type="hidden" name="meta">
 	<input type="hidden" name="problem">
 	<input type="hidden" name="description">
